[package]
name = "hibp-index"
version = "0.1.0"
authors = ["Stefan Bühler <stbuehler@web.de>"]
edition = "2018"

[profile.release]
lto = true
panic = 'abort'

[dependencies]
anyhow = "1.0"
byteorder = "1.3"
flate2 = "1.0"
hex = "0.4.2"
md4 = "0.9.0"
ring = "0.16.19"
thiserror = "1.0"
clap = "2.33.3"
