[package]
name = "hibp-index"
version = "0.1.0"
authors = ["Stefan Bühler <source@stbuehler.de>"]
edition = "2021"

[profile.release]
lto = true
panic = 'abort'

[dependencies]
anyhow = "1.0"
byteorder = "1.3"
cached = { version = "0.42", default-features = false }
clap = { version = "4.1", features = ["derive"] }
flate2 = "1.0"
hex = "0.4.2"
md4 = "0.10.0"
sha-1 = "0.10.1"
thiserror = "1.0"
